# opengl-project

./: CMakeLists.txt  README.md  file.cpp
dep/: config.h
dep/glad/: glad.c  glad.h
src/: config.h  main.cpp
src/shaders/: fragment color.txt  vertex.txt
